--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body id="top">
 <header id="header">
 	<div id="headerWrap">
-		<h1><img src="images/logo.png" width="142" height="80" alt="logo"></h1>
+		<h1>Takaya & Yuri</h1>
 		<nav id="mainnav">
 			<p id="menuWrap"><a id="menu"><span id="menuBtn"></span></a></p>
 			<div class="panel">
@@ -40,7 +40,10 @@
 		<h2><span>Message</span></h2>
 	</header>
 	<div class="innerS">
-		ちかごろ世間で日本歴史の科学的研究ということがしきりに叫ばれている。科学的研究というのが近代史学の学問的方法による研究という意義であるならば、これは史学の学徒の間においては一般に行われていることであるから、今さらこと新しくいうには及ばないはずである。上にいったようなことがらについては、曖昧あいまいな態度をとり、または真実でない知識を強いて注入していたことも、明かな事実である。
+		このたび　私たちは結婚式を挙げることになりました。
+        つきまして日ごろお世話になっている皆様にお集まりいただき、
+        ささやかな披露宴を催したいと存じます。ご多用中誠に恐縮ではございますが
+        ご来臨の栄を賜りたく謹んでご案内申し上げます。
 	</div>
 </section>
 <!-- // MESSAGE -->
@@ -57,9 +60,6 @@
 		<li><img src="images/photo04.jpg" width="426" height="418" alt=""></li>
 		<li><img src="images/photo05.jpg" width="426" height="418" alt=""></li>
 		<li><img src="images/photo06.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo07.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo08.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo09.jpg" width="426" height="418" alt=""></li>
 	</ul>
 </section>
 <!-- // GALLERY -->
@@ -67,7 +67,7 @@
 <!-- PROJECT -->
 <section id="sec03">
 	<header>
-		<h2><span>Project</span></h2>
+		<h2><span>Schedule</span></h2>
 	</header>
 	<div class="innerS">
 		<img src="images/imgProject.jpg" width="726" height="333" alt="">
