あとタイムテーブルだけ

--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 				<ul>
 					<li><a href="#top">TOP</a></li>
 					<li><a href="#sec01">MESSAGE</a></li>
-					<li><a href="#sec02">GALLERY</a></li>
-					<li><a href="#sec03">PROJECT</a></li>
-					<li><a href="#sec04">BRAND</a></li>
-					<li><a href="#sec05">COMPANY</a></li>
+                    <li><a href="#sec03">DATE & PLACE</a></li>
+					<li><a href="#sec05">SCHEDULE</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -48,94 +46,57 @@
 </section>
 <!-- // MESSAGE -->
 
-<!-- GALLERY -->
-<section id="sec02">
-	<header>
-		<h2><span>Gallery</span></h2>
-	</header>
-	<ul id="gallery">
-		<li><img src="images/photo01.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo02.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo03.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo04.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo05.jpg" width="426" height="418" alt=""></li>
-		<li><img src="images/photo06.jpg" width="426" height="418" alt=""></li>
-	</ul>
-</section>
-<!-- // GALLERY -->
 
-<!-- PROJECT -->
+<!-- Date & Place -->
 <section id="sec03">
 	<header>
-		<h2><span>Schedule</span></h2>
+		<h2><span>Date & Place</span></h2>
 	</header>
-	<div class="innerS">
-		<img src="images/imgProject.jpg" width="726" height="333" alt="">
-		<p>ちかごろ世間で日本歴史の今さらこと新しくいうには科学的研究ということがしきりに叫ばれているということがしきりに叫ばれている。科学的研究というのが近代史学の学問的方法による研究という意義であるならば、これは史学の学徒の間においては一般に行われていることであるから、今さらこと新しくいうには及ばないはずである。科学的研究というのが近代史学の学問的方法によるちかごろ世間で日本歴史の科学的研究及ばないはずである。</p>
-	</div>
-</section>
-<!-- // PROJECT -->
-
-<img src="images/subImg.jpg" alt="">
-
-<!-- BRAND --> 
-<section id="sec04">
-	<header>
-		<h2><span>Brand</span></h2>
-	</header>
-	<div class="inner">
-		<ul class="col3">
-			<li>
-				<p class="img"><img src="images/logo01.png" width="170" height="106" alt=""></p>
-				<p>科学的研究というのが近代史学の学問的方法による研究という意義であるならば、これは史学の学徒の間においては一般に行われていることであるから、今さらこと新しくいう。</p>
-			</li>
-			<li>
-				<p class="img"><img src="images/logo02.png" width="170" height="106" alt=""></p>
-				<p>日本歴史の科学的研究ということがしきりに叫ばれている。科学的研究というのが近代史学の学問的方法による研究という意義であるならば意義であるならば。</p>
-			</li>
-			<li>
-				<p class="img"><img src="images/logo03.png" width="170" height="106" alt=""></p>
-				<p>科学的研究というのが近代史学の学問的方法による研究という意義であるならば、これは史学の学徒の間においては一般に行われていることであるから、今さらこと新しくいう。</p>
-			</li>
-		</ul>
-	</div>
-	<div id="sec04_02">
-		<p><img src="images/logoBrand.png" width="340" height="107" alt=""></p>
-	</div>
-</section>
-<!-- // STORY -->
-
-<!-- COMPANY -->
-<section id="sec05">
-	<header>
-		<h2><span>Company</span></h2>
-	</header>
-	<div class="innerS">
+    <div class="innerS">
 		<ul class="col2">
 			<li>
-				<p>〒103-1234<br>見本県見本市仮区見本町1-3-5</p>
-				<p>TEL 01234-567-8901</p>
-				<p>e-Mail info@example.com</p>
-				<p>営業時間 10:00〜20:00（水曜定休）</p>
-				<p>※都合により休業する場合がございます</p>
-				<p id="sns">
-					<a href="#" target="_blank"><img src="images/iconFb.png" width="20" height="20" alt="FB"></a>
-					<a href="#" target="_blank"><img src="images/iconTw.png" width="20" height="20" alt="twitter"></a>
-					<a href="#" target="_blank"><img src="images/iconInsta.png" width="20" height="20" alt="Instagram"></a>
-					<a href="#" target="_blank"><img src="images/iconYouTube.png" width="20" height="20" alt="You Tube"></a>
-				</p>
+                <p>日付：2022/06/04</p>
+                <p>会場：藻岩シャローム教会 札幌市南区藻岩下2-1-1</p>
 			</li>
 			<li>
 				<div id="map">
 					<!-- GOOGLE MAP -->
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3198.5937927089367!2d136.92980931491988!3d36.70829797996758!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff781ec5af4ca3f%3A0x2ade3e8e4c2801b8!2z56aP5bKh6aeF!5e0!3m2!1sja!2sus!4v1478313402186" allowfullscreen></iframe>
-					<!-- // GOOGLE MAP -->
-				</div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2917.6339986850635!2d141.33823671550294!3d43.0070408019896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0ad59c7506b753%3A0x4b158307b0d1fb6d!2z6Je75bKp44K344Oj44Ot44O844Og5pWZ5Lya!5e0!3m2!1sja!2sjp!4v1653753908576!5m2!1sja!2sjp" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
 			</li>
 		</ul>
 	</div>
 </section>
-<!-- // COMPANY -->
+<!-- // Date -->
+
+<!-- Schedule --> 
+<section id="sec05">
+	<header>
+		<h2><span>Schedule</span></h2>
+	</header>
+	<div class="innerS">
+		<!-- <img src="images/imgProject.jpg" width="726" height="333" alt=""> -->
+        
+        <table border="1">
+            <tr>
+                <td>~17:50</td>
+                <td>集合</td>
+            </tr>
+            <tr>
+                <td>18:00~19:00</td>
+                <td>結婚式</td>
+            </tr>
+            <tr>
+                <td>19:00~21:00</td>
+                <td>結婚パーティー</td>
+            </tr>
+        </table>
+		<p>※バスに乗る予定の方は17:00までに事前にお伝えした場所に時間厳守で集合お願いします。</p>
+    </div>
+</section>
+<!-- // Schedule -->
+
+
 
 <footer id="footer">
 	Copyright(c) 2016 Sample Inc. All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank">http://f-tpl.com</a><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
