--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<meta name="description" content="最新技術と自然との調和を目指す">
 <meta name="viewport" content="width=device-width">
-<title>SAMPLE COMPANY | 最新技術と自然との調和を目指す</title>
+<title>Takaya & Yuri</title>
 <link rel="stylesheet" media="all" href="css/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="js/script.js"></script>
@@ -40,7 +39,7 @@
 	<div class="innerS">
 		このたび　私たちは結婚式を挙げることになりました。
         つきまして日ごろお世話になっている皆様にお集まりいただき、
-        ささやかな披露宴を催したいと存じます。ご多用中誠に恐縮ではございますが
+        ささやかな結婚パーティーを催したいと存じます。ご多用中誠に恐縮ではございますが
         ご来臨の栄を賜りたく謹んでご案内申し上げます。
 	</div>
 </section>
@@ -77,7 +76,7 @@
 	<div class="innerS">
 		<!-- <img src="images/imgProject.jpg" width="726" height="333" alt=""> -->
         
-        <table border="1">
+        <table border="1" >
             <tr>
                 <td>~17:50</td>
                 <td>集合</td>
@@ -89,6 +88,14 @@
             <tr>
                 <td>19:00~21:00</td>
                 <td>結婚パーティー</td>
+            </tr>
+            <tr>
+                <td>21:00~21:30</td>
+                <td>2次会会場へバスで移動</td>
+            </tr>
+            <tr>
+                <td>21:30~24:00</td>
+                <td>2次会</td>
             </tr>
         </table>
 		<p>※バスに乗る予定の方は17:00までに事前にお伝えした場所に時間厳守で集合お願いします。</p>
