とりあえず完成？

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 		<h2><span>Message</span></h2>
 	</header>
 	<div class="innerS">
-		このたび　私たちは結婚式を挙げることになりました。
+		<img src="images/imgProject.jpg" width="726" height="333" alt="" style="display: block; margin: auto;">
+
+		<p>このたび　私たちは結婚式を挙げることになりました。
         つきまして日ごろお世話になっている皆様にお集まりいただき、
         ささやかな結婚パーティーを催したいと存じます。ご多用中誠に恐縮ではございますが
-        ご来臨の栄を賜りたく謹んでご案内申し上げます。
+        ご来臨の栄を賜りたく謹んでご案内申し上げます。</p>
 	</div>
 </section>
 <!-- // MESSAGE -->
@@ -77,6 +79,9 @@
 		<!-- <img src="images/imgProject.jpg" width="726" height="333" alt=""> -->
         
         <table border="1" >
+			<tr>
+				<th colspan="2"><font>2022/06/04</font></td>
+			</tr>
             <tr>
                 <td>~17:50</td>
                 <td>集合</td>
@@ -98,7 +103,7 @@
                 <td>2次会</td>
             </tr>
         </table>
-		<p>※バスに乗る予定の方は17:00までに事前にお伝えした場所に時間厳守で集合お願いします。</p>
+		<p>※札幌駅からバスに乗る予定の方は17:00までに事前にお伝えした場所に時間厳守で集合お願いします。17時に問答無用で出発します。</p>
     </div>
 </section>
 <!-- // Schedule -->
